namespace Lesson_6.Animals
{
    public enum AnimalState
    {
        IDLE, EATING, SLEEPING, HUNTING, FLEEING 
    }
}
