@startuml

namespace Lesson_6{
    class AnimalPen <<MonoBehaviour>>{
        + List<Animal> Animals
        + void SpawnAnimals(Dictionary<GameObject, int> spawns)
        + void SpawnAnimals(GameObject prefab, int[][] matrix)
        + void SpawnAnimals(GameObject prefab, int[,] matrix)
        + void SpawnAnimals(List<GameObject> anims)
        + void SpawnAnimals(HashSet<GameObject> animals)
    }

    class Player <<MonoBehaviour>>{
        + FriendlyAnimal SelectedAnimal
        # void Update()
    }

    class Zoo <<MonoBehaviour>>{
        + List<GameObject> AnimalPrefabs
        + GameObject AnimalPenPrefab
        + List<AnimalPen> Pens
        + List<Animal> AllAnimals
        # void Start()
        - AnimalPen Spawner(int counter)
    }

    namespace Animals{
        enum AnimalState{
            IDLE
            EATING
            SLEEPING
            HUNTING
            FLEEING
        }
        abstract class Animal <<MonoBehaviour>>{
            + AnimalState State
            # AnimalState CurrentState
            + void OnMouseDown()
        }

        abstract class FriendlyAnimal{
            + AnimalPen Pen
        }

        abstract class HostileAnimal{
        }

        interface IFriendlyAnimal{
            
        }

        interface IHostileAnimal{
            
        
        }

        class Chicken{
            # void Update()
            
        }

        class Pig{
            # void Update()

        }

        class Wolf{
            # void Update() 
            + void Attack()
        }

        FriendlyAnimal -up-|> Animal
        FriendlyAnimal -up-|> IFriendlyAnimal
        HostileAnimal -up-|> Animal
        HostileAnimal -up-|> IHostileAnimal
        Wolf -up-|> HostileAnimal
        Chicken -up-|> FriendlyAnimal
        Pig -up-|> FriendlyAnimal
        Animal *-- AnimalState : State
    }

    Player "1" ..> "1..*" Lesson_6.Animals.Animal : Interacts with
    AnimalPen "1" *-- "*" Lesson_6.Animals.Animal : Contains
    Zoo "1" *-- "*"  AnimalPen : Contains
    Zoo "1" .. "*"  Lesson_6.Animals.Animal


}

@enduml